bin/k8s/carvel/google-cloud-sql-auth-proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: google-cloud-sql-auth-proxy-deployment
spec:
  selector:
    matchLabels:
      app: google-cloud-sql-auth-proxy-deployment
  template:
    metadata:
      labels:
        app: google-cloud-sql-auth-proxy-deployment
    spec:
      volumes:
        - name: google-cloud-sql-auth-proxy-deployment-volume
          secret:
            secretName: mogul-sql-secrets
      containers:
      - name: cloud-sql-proxy

        # It is recommended to use the latest version of the Cloud SQL Auth Proxy
        # Make sure to update on a regular schedule!
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
        args:
          # If connecting from a VPC-native GKE cluster, you can use the
          # following flag to have the proxy connect over private IP
          # - "--private-ip"

          # Enable structured logging with LogEntry format:
          - "--structured-logs"
          # Provide link to the service accounts volume
          - "--credentials-file=/secrets/service_account.json"

          # Replace DB_PORT with the port the proxy should listen on
          - "--port=5432"
          - "joshlong:us-east4:mogul-production"

        securityContext:
          # The default Cloud SQL Auth Proxy image runs as the
          # "nonroot" user and group (uid: 65532) by default.
          runAsNonRoot: true
        volumeMounts:
          - mountPath: /secrets/
            name: google-cloud-sql-auth-proxy-deployment-volume
            readOnly: true
        # You should use resource requests/limits as a best practice to prevent
        # pods from consuming too many resources and affecting the execution of
        # other pods. You should adjust the following values based on what your
        # application needs. For details, see
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
        resources:
          requests:
            # The proxy's memory use scales linearly with the number of active
            # connections. Fewer open connections will use less memory. Adjust
            # this value based on your application's requirements.
            memory: "2Gi"
            # The proxy's CPU use scales linearly with the amount of IO between
            # the database and the application. Adjust this value based on your
            # application's requirements.
            cpu:    "1"
